<resources>
    <string name="app_name" translatable="false">KatAn</string>
    <string name="name" translatable="false">KatAn</string>
    <string name="go" translatable="false">вперед</string>
    <string name="picture" translatable="false">объяснение уроков</string>
    <string name="Description" translatable="false">Картинка для выбора уровней</string>
    <string name="back" translatable="false">button back</string>
    <string name="library" translatable="false">Library</string>
    <string name="start" translatable="false">Начать</string>
    <string name="level1" translatable="false">Урок 1</string>
    <string name="level2" translatable="false">Урок 2</string>
    <string name="level3" translatable="false">Урок 3</string>
    <string name="level4" translatable="false">Урок 4</string>
    <string name="level5" translatable="false">Урок 5</string>
    <string name="level6" translatable="false">Урок 6</string>
    <string name="book1" translatable="false">Баммес Готфрид: Образ человека.</string>
    <string name="book2" translatable="false">Баммес Готфрид: Образ человека.</string>
    <string name="book3" translatable="false">Барбер Баррингтон: Анатомия для художников.</string>
    <string name="book4" translatable="false">Бёрн Хогарт: Динамическая анатомия для художников.</string>
    <string name="lessonone" translatable="false">Урок 1: простые фигуры.</string>
    <string name="lessontwo" translatable="false">Урок 2: цвета.</string>
    <string name="lessonthree" translatable="false">Урок 3: композиция.</string>
    <string name="lessonfour" translatable="false">Урок 4: перспектива.</string>
    <string name="lessonfive" translatable="false">Урок 5: прорисовка цветов.</string>
    <string name="lessonsix" translatable="false">Урок 6: стили и техники.</string>
    <string name="level_one" translatable="false">(примечание: ниже представлены картинки и они перелистываются для наглядного примера как рисовать)\n
        Шар.\n
1) Нарисуйте круг. Не стоит переживать если он кривой, со временем вы научитесь рисовать его ровно.\n
Так же нужно отметить источник света. Он нужен нам чтобы определить где на предмете будет блик(самый светлый участок на предмете), а где будет тень.\n
Посмотрев на предметы вокруг вас, вы сможете увидеть тени отходящие от предмета. К примеру если свет падает сверху и поднять карандаш, то тень будет располагаться под ним,\n
        а если приложить к бумаге одним концом, то можно увидеть как тень сама присоединяется к карандашу, такая тень называется падающей.\n
2) Рисуем падающею тень и тень на шаре. Тень всегда противоположна источнику света и находится за объектом.\n
3) В конечном итоге мы должны затемнить все имеющиеся тени и сделать плавный переход между тонами.\n
    Куб.\n
1) Нарисуйте четыре точки, сверху и снизу они должны располагаться близко друг к другу. (посмотрите картинку для лучшего понимания).\n
2) Проведите первую линию от центральной точки к левой, последовательно повторите.\n
3) Дальше вам предстоит нарисовать три параллельных вертикальных лилии, центральная должна быть длиннее двух по бокам — это стороны куба.\n
4) От центральной линии надо провести отрезки, которые параллельны верхним граням. Не переживайте если вышли за пределы сторон куба, всегда можно всё исправить.\n
5) Дальше определяем источник света. Отмечаем, что мы используем направляющие линии, для того чтобы правильно выставить угол тени. Мы продлеваем нижнее правое ребро и рисуем падающую тень.\n
6) Для того, чтобы куб был закончен надо заштриховать противоположную от освещения грань. Заметьте, что не надо растушевывать, растушевка нужна только на округлых поверхностях.\n
        Цилиндр.\n
1)	нарисуйте две точки находящиеся на одной линии.\n
2)	Далее надо нарисовать овал, где эти точки будут являться закруглением.\n
3)	Нам нужны стороны цилиндра это будут две параллельные линии, выходящие из точек, которые мы нарисовали вначале.\n
4)	Так же нужен низ, это скругленная линия, которая изогнута больше, чем соответствующая ей верхняя. Здесь используются два закона одновременно: размер и расположение.\n
5)	По такому же методу нарисуйте сзади еще один цилиндр, который будет немного спрятан за первый ему подобный (маленькая самостоятельная работа). Правая сторона будет спрятана, это создаст иллюзию глубины и проработает ваши навыки.\n
6)	Добавьте источник света и тени, как уже умеете:), используйте растушевку.\n
</string>
    <string name="level_two" translatable="false"> 1. Три свойства цвета.\n
Прежде чем углубиться в теорию цвета, необходимо понять ее базовые принципы. \n
        Давайте обратимся к трем свойствам цвета. Они представляют собой общий язык теории цвета и всегда должны быть в уме художника. \n
- Цветовой тон — это чистый спектральный цвет, определяющийся частотой световой волны, он может быть любого оттенка, но не является результатом смешивания даже близких цветов. Так же он исключает добавление белого или черного. \n
- Световой тон – это параметр, характеризующий светлость краски независимо от ее цветового оттенка. Повышается добавлением белой краски. Черная, соответственно, понижает световой тон. \n
 -Теплохолодность – понятие относительное: зеленый теплее синего, но холоднее желтого. Если в чистый базовый оттенок добавить немного другого, соседнего, то его тон сместится в теплую или холодную сторону. \n Самый теплый – оранжевый, а наиболее холодный – синий. Это связано с тем, что огонь и солнце имеют оранжевые оттенки и воспринимаются как теплые даже если это, например, персик из морозилки. Синий и фиолетовый напоминают замерзший лед, посиневшие от холода губы. \n
2. Цветовой Круг. \n
Цветовой круг, основанный на красном, желтом и синем цветах – традиционная форма цветовой схемы в области искусства. Это три пигментных цвета, которые не могут быть смешаны или получены путем смешивания других цветов. Все другие цвета получены из этих трех оттенков. \n
3. Цвета второй группы. \n
К таким цветам относятся зеленый, оранжевый и фиолетовый. Эти цвета получены путем смешивания базовых цветов. Цвета первой и второй группы вместе образуют шестерку самых ярких цветов спектра. Смешивая каждый цвет с соседним, мы получим еще шесть цветов – цвета третьей группы. \n
5. Цвета третьей группы\n
К этой группе относятся желто-оранжевый, красно-оранжевый, красно-фиолетовый, сине-фиолетовый, сине-зеленый и желто-зеленый. Эти цвета получены путем смешивания одного базового и одного вторичного цвета. \n
</string>
    <string name="level_three" translatable="false">Понятие композиции в рисунке и ее виды.\n
В рисунке и живописи существуют два основных вида композиции:\n
1. Статичная - это композиция, которая передает в рисунке ощущение равновесия, состояние умиротворения.\n
2. Динамичная - хорошо передает движение, бурные эмоции, стихию природы.\n
        Рассмотрим первую картинку:\n
На левом рисунке ракета неподвижна. Статичная композиция в этом рисунке возникает за счет пересечения горизонтальной оси (линия горизонта) с вертикальной осью (ровно стоящая на земле ракета) под прямым углом.\n
На правом рисунке есть ощущение, что ракета летит. Это ощущение для зрителя мы создали с помощью динамичной композиции за счет смещения угла наклона.\n
Композиционный центр - это объект, к которому, по задумке художника, должен стремиться глаз зрителя - центральный элемент рисунка.\n
        Художнику очень важно уметь определить композиционный центр и сделать на нем акцент в своей работе.\n
Есть и исключения, например, паттерны (простые повторяющиеся формы, цвета или объекты), специфические иллюстрации, поддержанные определенной концепцией, могут не содержать композиционного центра.\n
Выделение композиционного центра в рисунке\n
КОНТРАСТНЫЙ КОМПОЗИЦИОННЫЙ ЦЕНТР\n
Контраст - это яркая разница между светлым и темным. Уловка заключается в том, что необходимо противопоставить композиционный центр тональности остальной композиции.
        То есть сделать так, чтобы задуманный вами композиционный центр был явно темнее, или явно светлее остальных элементов на картине.\n
НАПРАВЛЯЮЩИЕ ОСИ\n
Для привлечения внимания к композиционному центру своей картины, используйте направляющие линии.\n
        Направляющие линии можно использовать как леску, на которую нанизывают бусины, только вместо бусин будут предметы, задуманные в композиции.
        Важно построить движение, как систему коридоров, ведущих к одной цели - композиционному центру.\n
Правило «Золотого сечения»\n
«Золотое сечение» или «золотая пропорция» - это универсальное проявление структурной гармонии. В процентном округлённом значении золотое сечение — это деление какой-либо величины в отношении 62 % к 38 %.\n
1. Спиралевидное золотое сечение или логарифмическая спираль\n
2. Диагональное золотое сечение\n
Правило третей\n
Второе важное правило - это правило третей. Оно является упрощенной версией золотого сечения. Заключается оно в том, что лист делится на 9 равнозначных частей с помощью 2 параллельных горизонтальных и 2 вертикальных линий.\n
        Самое простое, чтобы добиться гармоничной композиции - это расположить композиционный центр в центральном прямоугольнике - как на примере ниже.\n
Существует определенная математическая пропорция для построения такой сетки, она показана на рисунке. Я рекомендую запомнить эти пропорции визуально и использовать их при создании собственных работ.\n
</string>
    <string name="level_four" translatable="false">Перспектива на примени куба в пространстве.\n
Мы рисуем линию горизонта разделяющая небо и землю.\n
Дальше ставим точки и рисуем определяющие линии, вы сами выбираем как они будут направляться, можете нарисовать так же как на фото.\n
Из пересеченых линий получился квадрат. Это основа нашей фигуры. Мы его обводим.\n
Потом рисуем одуванчик из сторон как на фото.\n
Из точек проводим еще линии до нарисованной нами стороны, они определят наши боковые стороны.\n
К этим сторонам проводим еще линии, повторяя фотографии, это определит заднюю грань, рисуем и ее.\n
И наконец, соединяем все стороны и по желанию рисуем тени.\n
</string>
</resources>