<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="space.kotik.katan.Library">

    <LinearLayout
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgbtn"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:background="@color/no"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/open_book"
            android:contentDescription="Выход из библиотеки" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/book1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book1"
                android:textColor="@color/lorange"
                android:textSize="30sp"
                android:fontFamily="@font/sjis_sp_setofont"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/book2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book2"
                android:textColor="@color/lorange"
                android:textSize="30sp"
                android:fontFamily="@font/sjis_sp_setofont"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/book3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book3"
                android:textColor="@color/lorange"
                android:textSize="30sp"
                android:fontFamily="@font/sjis_sp_setofont"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/book4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book4"
                android:textColor="@color/lorange"
                android:textSize="30sp"
                android:fontFamily="@font/sjis_sp_setofont"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>