<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="#00FFFFFF"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/btn_back"
            android:contentDescription="@string/back"/>

        <ImageButton
            android:id="@+id/library"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_marginStart="220dp"
            android:background="#00FFFFFF"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/clz_book"
            android:contentDescription="@string/library"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/one_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/levelone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sjis_sp_setofont"
                        android:text="@string/level1"
                        android:textColor="@color/lorange"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/Level_One"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/level1"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/level_one" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/leveltwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sjis_sp_setofont"
                        android:text="@string/level2"
                        android:textColor="@color/lorange"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/Level_Two"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/level2"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/level_two" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/three_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/levelthree"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sjis_sp_setofont"
                        android:text="@string/level3"
                        android:textColor="@color/lorange"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/Level_Three"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/level3"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/level_three" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/levelfour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sjis_sp_setofont"
                        android:text="@string/level4"
                        android:textColor="@color/lorange"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/Level_Four"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/level4"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/level_four" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fine_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/levelfive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sjis_sp_setofont"
                        android:text="@string/level5"
                        android:textColor="@color/lorange"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/Level_Five"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/level5"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/level_three" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/levelsix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sjis_sp_setofont"
                        android:text="@string/level6"
                        android:textColor="@color/lorange"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/Level_Six"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/level6"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/level_four" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>